[gd_scene load_steps=6 format=2]

[ext_resource path="res://Vehicle.tscn" type="PackedScene" id=1]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Surface.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sound/main-loop.mp3" type="AudioStream" id=5]

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="Surface" parent="." instance=ExtResource( 4 )]

[node name="Vehicle" parent="." instance=ExtResource( 1 )]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="contact" from="Vehicle" to="." method="_on_Vehicle_contact"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
